tests/com.e1c.dt.check.form.itests/workspace/InvalidItemIdCheck/src/Configuration/Configuration.mdo
<?xml version="1.0" encoding="UTF-8"?>
<mdclass:Configuration xmlns:mdclass="http://g5.1c.ru/v8/dt/metadata/mdclass" uuid="57df8a8e-e745-42f7-af98-40f0dc1dce28">
  <name>Configuration</name>
  <synonym>
    <key>en</key>
    <value>Configuration</value>
  </synonym>
  <containedObjects classId="9cd510cd-abfc-11d4-9434-004095e12fc7" objectId="f6ab1d0c-dd82-447a-a37f-41fbc7daaa23"/>
  <containedObjects classId="9fcd25a0-4822-11d4-9414-008048da11f9" objectId="5448985c-955a-4511-924e-62ee3c0c7b4d"/>
  <containedObjects classId="e3687481-0a87-462c-a166-9f34594f9bba" objectId="8ec1a870-ddbd-4643-8f93-033b8131defb"/>
  <containedObjects classId="9de14907-ec23-4a07-96f0-85521cb6b53b" objectId="0332a354-20f0-4564-be2f-ce7fc4baf87f"/>
  <containedObjects classId="51f2d5d8-ea4d-4064-8892-82951750031e" objectId="b0b6efd0-ea27-4f11-aae4-60df6b60c7ac"/>
  <containedObjects classId="e68182ea-4237-4383-967f-90c1e3370bc7" objectId="2bb82a2f-ea9a-4522-9633-a620cbecbf1d"/>
  <containedObjects classId="fb282519-d103-4dd3-bc12-cb271d631dfc" objectId="fdfdb070-feac-4a0c-93ca-327eb5417863"/>
  <configurationExtensionCompatibilityMode>8.3.19</configurationExtensionCompatibilityMode>
  <defaultRunMode>ManagedApplication</defaultRunMode>
  <usePurposes>PersonalComputer</usePurposes>
  <usedMobileApplicationFunctionalities>
    <functionality>
      <use>true</use>
    </functionality>
    <functionality>
      <functionality>OSBackup</functionality>
      <use>true</use>
    </functionality>
  </usedMobileApplicationFunctionalities>
  <defaultLanguage>Language.English</defaultLanguage>
  <dataLockControlMode>Managed</dataLockControlMode>
  <objectAutonumerationMode>NotAutoFree</objectAutonumerationMode>
  <modalityUseMode>DontUse</modalityUseMode>
  <synchronousPlatformExtensionAndAddInCallUseMode>DontUse</synchronousPlatformExtensionAndAddInCallUseMode>
  <compatibilityMode>8.3.19</compatibilityMode>
  <languages uuid="aa8dd1f0-25f4-43bf-9837-57e313a8259e">
    <name>English</name>
    <synonym>
      <key>en</key>
      <value>English</value>
    </synonym>
    <languageCode>en</languageCode>
  </languages>
  <catalogs>Catalog.Catalog</catalogs>
</mdclass:Configuration>
